--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
       <!-- made by -->
       <p class="text-center m-3 text-white fs-5 fst-italic">
-        made by Chayanin Suatap 123456789
+        made by Pearl Kurokami 640612094
       </p>
 
+
+
       <!-- user card -->
-      <div id="div-user-card" class="border rounded-3 p-3 bg-light">
+      <div id="div-user-card" class="border rounded-3 p-3 bg-light" >
         <img
           id="img-profile"
           class="rounded-circle d-block mx-auto"
